# subtitles_lab

./: CMakeLists.txt
include/: ASSSubtitle.h  SAMISubtitle.h  SRTSubtitle.h  Subtitle.h  VTTSubtitle.h
src/: ASSSubtitle.cpp  SAMISubtitle.cpp  SRTSubtitle.cpp  Subtitle.cpp  VTTSubtitle.cpp  main.cpp
tests/: tests.cpp
tests/data/: example.ass  example.srt  example.vtt
